<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B2EBF2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/solution_endof_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginRight="@dimen/dp16"
            android:layout_marginTop="@dimen/dp16"
            android:text="@string/solution"
            android:textColor="@android:color/background_dark"
            android:textSize="@dimen/sp24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginTop="@dimen/dp16"
            android:text="@string/question1"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/sp18"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp16"
            android:adjustViewBounds="true"
            android:src="@drawable/tr" />

        <TextView
            style="@style/AppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp8"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginRight="@dimen/dp16"
            android:maxLines="2"
            android:text="@string/question_text"
            android:textSize="@dimen/sp18" />


        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp16"
            android:checked="true"
            android:text="@string/option_c"
            android:textSize="@dimen/sp18" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginTop="@dimen/dp16"
            android:text="@string/question2"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/sp18"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp16"
            android:adjustViewBounds="true"
            android:src="@drawable/et" />

        <TextView
            style="@style/AppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp8"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginRight="@dimen/dp16"
            android:maxLines="2"
            android:text="@string/question_text"
            android:textSize="@dimen/sp18" />


        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp16"
            android:checked="true"
            android:text="@string/option_d"
            android:textSize="@dimen/sp18" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginTop="@dimen/dp16"
            android:text="@string/question3"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/sp18"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp16"
            android:adjustViewBounds="true"
            android:src="@drawable/kh" />

        <TextView
            style="@style/AppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp8"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginRight="@dimen/dp16"
            android:maxLines="2"
            android:text="@string/question_text"
            android:textSize="@dimen/sp18" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp16"
            android:checked="true"
            android:text="@string/option_b"
            android:textSize="@dimen/sp18" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginTop="@dimen/dp16"
            android:text="@string/question4"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/sp18"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp16"
            android:adjustViewBounds="true"
            android:src="@drawable/uy" />

        <TextView
            style="@style/AppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp8"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginRight="@dimen/dp16"
            android:maxLines="2"
            android:text="@string/question_text"
            android:textSize="@dimen/sp18" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp16"
            android:checked="true"
            android:text="@string/option_a"
            android:textSize="@dimen/sp18" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginTop="@dimen/dp16"
            android:text="@string/question5"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/sp18"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp16"
            android:adjustViewBounds="true"
            android:src="@drawable/eg" />

        <TextView
            style="@style/AppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp8"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginRight="@dimen/dp16"
            android:maxLines="2"
            android:text="@string/question_text2"
            android:textSize="@dimen/sp18" />

        <EditText
            android:id="@+id/question5_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginRight="@dimen/dp16"
            android:enabled="false"
            android:hint="@string/question5_answer"
            android:inputType="textCapWords" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginTop="@dimen/dp16"
            android:text="@string/question6"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/sp18"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp16"
            android:adjustViewBounds="true"
            android:src="@drawable/in" />

        <TextView
            style="@style/AppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp8"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginRight="@dimen/dp16"
            android:maxLines="2"
            android:text="@string/question_text2"
            android:textSize="@dimen/sp18" />

        <EditText
            android:id="@+id/question6_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginRight="@dimen/dp16"
            android:enabled="false"
            android:hint="@string/question6_answer"
            android:inputType="textCapWords" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginTop="@dimen/dp16"
            android:text="@string/question7"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/sp18"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp16"
            android:adjustViewBounds="true"
            android:src="@drawable/bo" />

        <TextView
            style="@style/AppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp8"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginRight="@dimen/dp16"
            android:maxLines="2"
            android:text="@string/question_text2"
            android:textSize="@dimen/sp18" />

        <EditText
            android:id="@+id/question7_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginRight="@dimen/dp16"
            android:enabled="false"
            android:hint="@string/question7_answer"
            android:inputType="textCapWords" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginTop="@dimen/dp16"
            android:text="@string/question8"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/sp18"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp16"
            android:adjustViewBounds="true"
            android:src="@drawable/lt" />

        <TextView
            style="@style/AppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp8"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginRight="@dimen/dp16"
            android:maxLines="2"
            android:text="@string/question_text2"
            android:textSize="@dimen/sp18" />

        <EditText
            android:id="@+id/question8_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginRight="@dimen/dp16"
            android:enabled="false"
            android:hint="@string/question8_answer"
            android:inputType="textCapWords" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginTop="@dimen/dp16"
            android:text="@string/question9"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/sp18"
            android:textStyle="bold" />

        <TextView
            style="@style/AppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp8"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginRight="@dimen/dp16"
            android:layout_marginTop="@dimen/dp8"
            android:maxLines="2"
            android:text="@string/question_text3"
            android:textSize="@dimen/sp18" />


        <CheckBox
            android:id="@+id/checkbox1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginRight="@dimen/dp8"
            android:checked="true"
            android:enabled="false"
            android:fadeScrollbars="false"
            android:text="@string/checkbox1" />

        <CheckBox
            android:id="@+id/checkbox2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp8"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginRight="@dimen/dp8"
            android:layout_marginTop="@dimen/dp8"
            android:checked="true"
            android:enabled="false"
            android:text="@string/checkbox2" />

    </LinearLayout>

</ScrollView>