<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B2EBF2"
    tools:context="com.aydinaytac.android.flagsofcountries.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:paddingLeft="48dp"
            android:paddingRight="48dp"
            android:paddingTop="8dp"
            android:src="@drawable/international" />

        <TextView
            style="@style/AppTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:fontFamily="monospace"
            android:text="@string/app_intro"
            android:textSize="32sp" />
    </LinearLayout>

    <Button
        android:id="@+id/start_quiz_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:onClick="startQuizButton"
        android:text="@string/start_quiz" />

    <EditText
        android:id="@+id/name_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/start_quiz_button"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/name_hint"
        android:inputType="textCapWords"
        android:paddingLeft="16dp"
        android:textSize="24sp" />

</RelativeLayout>
