<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B2EBF2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginTop="@dimen/dp16"
            android:text="@string/question5"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/sp18"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp16"
            android:adjustViewBounds="true"
            android:src="@drawable/eg" />

        <TextView
            style="@style/AppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp8"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginRight="@dimen/dp16"
            android:maxLines="2"
            android:text="@string/question_text2"
            android:textSize="@dimen/sp18" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginRight="@dimen/dp16"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/question5_edittext"
                android:layout_width="@dimen/dp0"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp8"
                android:layout_weight="2"
                android:hint="@string/continent"
                android:inputType="textCapWords" />

            <Button
                android:id="@+id/question5_check_button"
                android:layout_width="@dimen/dp0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="q5CheckButton"
                android:text="@string/check_button" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginTop="@dimen/dp16"
            android:text="@string/question6"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/sp18"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp16"
            android:adjustViewBounds="true"
            android:src="@drawable/in" />

        <TextView
            style="@style/AppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp8"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginRight="@dimen/dp16"
            android:maxLines="2"
            android:text="@string/question_text2"
            android:textSize="@dimen/sp18" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginRight="@dimen/dp16"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/question6_edittext"
                android:layout_width="@dimen/dp0"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp8"
                android:layout_weight="2"
                android:hint="@string/continent"
                android:inputType="textCapWords" />

            <Button
                android:id="@+id/question6_check_button"
                android:layout_width="@dimen/dp0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="q6CheckButton"
                android:text="@string/check_button" />

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginTop="@dimen/dp16"
            android:text="@string/question7"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/sp18"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp16"
            android:adjustViewBounds="true"
            android:src="@drawable/bo" />

        <TextView
            style="@style/AppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp8"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginRight="@dimen/dp16"
            android:maxLines="2"
            android:text="@string/question_text2"
            android:textSize="@dimen/sp18" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginRight="@dimen/dp16"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/question7_edittext"
                android:layout_width="@dimen/dp0"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp8"
                android:layout_weight="2"
                android:hint="@string/continent"
                android:inputType="textCapWords" />

            <Button
                android:id="@+id/question7_check_button"
                android:layout_width="@dimen/dp0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="q7CheckButton"
                android:text="@string/check_button" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginTop="@dimen/dp16"
            android:text="@string/question8"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/sp18"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp16"
            android:adjustViewBounds="true"
            android:src="@drawable/lt" />

        <TextView
            style="@style/AppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp8"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginRight="@dimen/dp16"
            android:maxLines="2"
            android:text="@string/question_text2"
            android:textSize="@dimen/sp18" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginRight="@dimen/dp16"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/question8_edittext"
                android:layout_width="@dimen/dp0"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp8"
                android:layout_weight="2"
                android:hint="@string/continent"
                android:inputType="textCapWords" />

            <Button
                android:id="@+id/question8_check_button"
                android:layout_width="@dimen/dp0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="q8CheckButton"
                android:text="@string/check_button" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginTop="@dimen/dp16"
            android:text="@string/question9"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/sp18"
            android:textStyle="bold" />

        <TextView
            style="@style/AppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp8"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginRight="@dimen/dp16"
            android:layout_marginTop="@dimen/dp8"
            android:maxLines="2"
            android:text="@string/question_text3"
            android:textSize="@dimen/sp18" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="@dimen/dp0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkbox1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp16"
                    android:layout_marginRight="@dimen/dp8"
                    android:text="@string/checkbox1" />

                <CheckBox
                    android:id="@+id/checkbox2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp8"
                    android:layout_marginLeft="@dimen/dp16"
                    android:layout_marginRight="@dimen/dp8"
                    android:layout_marginTop="@dimen/dp8"
                    android:text="@string/checkbox2" />
            </LinearLayout>

            <Button
                android:id="@+id/question9_check_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/dp16"
                android:gravity="center_vertical"
                android:onClick="q9checkbox"
                android:text="@string/check_button"
                android:textAlignment="center" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/dp8"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginRight="@dimen/dp16"
            android:layout_marginTop="@dimen/dp8"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/finish_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="finishButton"
                android:text="@string/finish_button" />

            <Button
                android:id="@+id/solution_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:enabled="false"
                android:onClick="solutionButton"
                android:text="@string/solution_button" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>